package finalproject.creatures;

public class Goblin extends GoblinSide {
    public Goblin() {
        super("Goblin");
    }

}