package finalproject.worldmap;


public class CalabashWorld extends World {
    private static final int SIZE = 10;

    public CalabashWorld() {
        super(new Grid[SIZE][SIZE]);
    }
}
